Fixed indent of ShortcutPanels Headline
git-svn-id: https://svn.codehaus.org/izpack/izpack-src/trunk@1464 7d736ef5-cfd4-0310-9c9a-b52d5c14b761